fix mobile layout gap @ 'productivity tools'

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -51,11 +51,16 @@ $font:  'Bai Jamjuree', sans-serif
 .Features__Snippets
     margin: 0 0 8rem
     
+    
     h3
         margin: 1rem 0 0.5rem
 
     p
         margin: 0 0 3rem
+
+.Features__Tools
+    display: grid
+    gap: 2rem
 
 .Download
     
